# eda

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  PERFORMANCE.md  SMOKE_CHECKLIST.md
examples/: sample_graph.json
scripts/: build.ps1  run.ps1  stress.ps1  update_snapshots.ps1
src/: GraphView.cpp  GraphView.h  MainWindow.cpp  MainWindow.h
src/app/: GraphView.cpp  GraphView.h  MainWindow.cpp  MainWindow.h  main.cpp
src/commands/: DocumentStateCommand.cpp  DocumentStateCommand.h  NodeEditCommands.cpp  NodeEditCommands.h
src/items/: EdgeItem.cpp  EdgeItem.h  NodeItem.cpp  NodeItem.h  PortItem.cpp  PortItem.h
src/model/: ComponentCatalog.cpp  ComponentCatalog.h  GraphDocument.h  GraphSerializer.cpp  GraphSerializer.h
src/panels/: LayerPanel.cpp  LayerPanel.h  PalettePanel.cpp  PalettePanel.h  ProjectTreePanel.cpp  ProjectTreePanel.h  PropertyPanel.cpp  PropertyPanel.h  README.md
src/scene/: EditorScene.cpp  EditorScene.h
tests/: test_suite.cpp
tests/baselines/: README.md
